==> Unica-RocketSpace/CanSat-2018/board/Unica_2018_STM32F405/src/drivers/sd/sd.c <==
#include <string.h>
#include <errno.h>
#include <stm32f4xx_hal.h>
#include "FreeRTOS.h"
#include "task.h"
#include "diag/Trace.h"
#include "sd.h"
#include "crc.h"
#include "state.h"
#define SD_SPI	SPI1 	// настройки пинов и порта сюда пока не вынесены
#define SD_DMA	DMA2
#define SD_PORT	GPIOC
#define SD_PIN	3
#define SD_DMA_CHANNEL		DMA_CHANNEL_3
#define SD_DMA_RX_STREAM	DMA2_Stream0
#define SD_DMA_TX_STREAM	DMA2_Stream3
#define SD_BAUD_RATE_PRESCALER_SLOW SPI_BAUDRATEPRESCALER_256	//!< для первичной прокачки и инициализации SD карты
#define SD_BAUD_RATE_PRESCALER_FAST SPI_BAUDRATEPRESCALER_16	//!< для основной работы. Быстрее не может :c
#define SD_R1_IDLE (1 << 0)
#define SD_R1_ILLEGAL_CMD (1 << 2)
#define SD_R1_CRC_ERR (1 << 3)
#define SD_DATA_RESP_MASK           0x1F  // маска ответа SD карты о приеме данных
#define SD_DATA_RESP_DATA_ACCEPTED  0x05  // ответ SD карты - данные получены
#define SD_DATA_RESP_CRC_ERROR      0x0B  // ответ SD карты - ошибка CRC
#define SD_DATA_RESP_WRITE_ERROR    0x0D  // ответ SD карты - ошибка записи
#define SD_TOKEN_SINGLE_DATA 0xFE   // Токен заголовка пакета для CMD17/18/24
#define SD_TOKEN_MULTI_DATA 0xFC    // Токен заголовка пакета для CMD25
#define SD_TOKEN_NO_MORE_DATA 0xFD  // Токен заверешения передачи данных для CMD25
#define GOTO_END_IF_ERROR(X) if ((error = (X)) != SD_ERROR_NONE) goto end;
#define SD_CMD_TEAK_TIMEOUT (100)

void sd_cs(bool state)
{
	HAL_GPIO_WritePin(GPIOC, GPIO_PIN_3, state ? RESET : SET);
}

uint8_t sd_init(SPI_HandleTypeDef* hspi)
{
	memset(_dummy_, 0xFF, 512);


	uint8_t error = 0;
	//Иницилизация SPI
	hspi->Instance = SPI1;
	hspi->Init.Mode = SPI_MODE_MASTER;
	hspi->Init.Direction = SPI_DIRECTION_2LINES;
	hspi->Init.DataSize = SPI_DATASIZE_8BIT;
	hspi->Init.CLKPolarity = SPI_POLARITY_LOW;
	hspi->Init.CLKPhase = SPI_PHASE_1EDGE;
	hspi->Init.NSS = SPI_NSS_SOFT;
	hspi->Init.BaudRatePrescaler = SD_BAUD_RATE_PRESCALER_FAST;
	hspi->Init.FirstBit = SPI_FIRSTBIT_MSB;
	hspi->Init.TIMode = SPI_TIMODE_DISABLE;
	hspi->Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;

	PROCESS_ERROR(HAL_SPI_Init(hspi));

	for (int i = 0; i < 600000; i++) {
		volatile uint8_t x = 0;
	}

	sd_cs(false);


	/*HAL_NVIC_SetPriority(SPI1_IRQn, 0, 0);
	HAL_NVIC_EnableIRQ(SPI1_IRQn);
	__HAL_RCC_DMA2_CLK_ENABLE();
	//	 настраиваем DMA для работы с SPI_TX
	_sd_dma_spi_tx.Instance = SD_DMA_TX_STREAM;
	_sd_dma_spi_tx.Init.Channel = SD_DMA_CHANNEL;
	_sd_dma_spi_tx.Init.Direction = DMA_MEMORY_TO_PERIPH;
	_sd_dma_spi_tx.Init.PeriphInc = DMA_PINC_DISABLE;
	_sd_dma_spi_tx.Init.MemInc = DMA_MINC_ENABLE;
	_sd_dma_spi_tx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
	_sd_dma_spi_tx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
	_sd_dma_spi_tx.Init.Mode = DMA_NORMAL;
	_sd_dma_spi_tx.Init.Priority = DMA_PRIORITY_MEDIUM;
	_sd_dma_spi_tx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
	_sd_dma_spi_tx.Init.FIFOThreshold = DMA_FIFO_THRESHOLD_FULL;
	_sd_dma_spi_tx.Init.MemBurst = DMA_MBURST_SINGLE;
	_sd_dma_spi_tx.Init.PeriphBurst = DMA_PBURST_SINGLE;
	PROCESS_ERROR(HAL_DMA_Init(&_sd_dma_spi_tx));
	__HAL_LINKDMA(&spi_nRF24L01, hdmatx, _sd_dma_spi_tx);
	 DMA interrupt init
	HAL_NVIC_SetPriority(DMA2_Stream3_IRQn, 0, 0);
	HAL_NVIC_EnableIRQ(DMA2_Stream3_IRQn);
	//	 настраиваем DMA для работы с SPI_RX
	_sd_dma_spi_rx.Instance = SD_DMA_RX_STREAM;
	_sd_dma_spi_rx.Init.Channel = SD_DMA_CHANNEL;
	_sd_dma_spi_rx.Init.Direction = DMA_PERIPH_TO_MEMORY;
	_sd_dma_spi_rx.Init.PeriphInc = DMA_PINC_DISABLE;
	_sd_dma_spi_rx.Init.MemInc = DMA_MINC_ENABLE;
	_sd_dma_spi_rx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
	_sd_dma_spi_rx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
	_sd_dma_spi_rx.Init.Mode = DMA_NORMAL;
	_sd_dma_spi_rx.Init.Priority = DMA_PRIORITY_MEDIUM;
	_sd_dma_spi_rx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
	_sd_dma_spi_rx.Init.FIFOThreshold = DMA_FIFO_THRESHOLD_FULL;
	_sd_dma_spi_rx.Init.MemBurst = DMA_MBURST_SINGLE;
	_sd_dma_spi_rx.Init.PeriphBurst = DMA_PBURST_SINGLE;
	PROCESS_ERROR(HAL_DMA_Init(&_sd_dma_spi_rx));
	__HAL_LINKDMA(&spi_nRF24L01, hdmarx, _sd_dma_spi_rx);
	 DMA interrupt init
	HAL_NVIC_SetPriority(DMA2_Stream0_IRQn, 0, 0);
	HAL_NVIC_EnableIRQ(DMA2_Stream0_IRQn);*/

end:
	sd_cs(false);
	return error;
}

void sd_exchange(void * to_send, void * to_recieve, size_t amount)
{
	HAL_SPI_TransmitReceive(&spi_nRF24L01, to_send, to_recieve, amount, 0xFF);
}

sd_error_t sd_startup(void)
{
   sd_error_t error = SD_ERROR_NONE;
   sd_card_type_t card_type;

   for (int i = 0; i < 10000; i++) {
   		volatile uint8_t x = 0;
   	}

   // Переключаем SPI на медленный режим
   spi_nRF24L01.Init.BaudRatePrescaler = SD_BAUD_RATE_PRESCALER_SLOW; // пока такой, можно будет и побыстрее
   HAL_SPI_Init(&spi_nRF24L01);

   // прокачиваем 20 SPI тактов на SD карту при выключенном CS и удерживаю на линии MOSI единицу (0xFF)
   sd_cs(false);
   uint8_t dummy[10];
   memset(dummy, 0xFF, sizeof(dummy));
   sd_write(dummy, sizeof(dummy));
//   sd_cs(true);
   // отправляем карте команду CMDO уже при включенном CS
   uint8_t r1_resp;
   GOTO_END_IF_ERROR(sd_cmd(SD_CMD0, 0x00, &r1_resp));
   if (r1_resp & ~SD_R1_IDLE) // должен быть только IDLE бит, без других ошибок
   {
      error = SD_ERROR_WRONG_RESPONSE;
      goto end;
   }

   // отлично - карта в состоние IDLE

   // заставим её проверить напряжение питания
   // ошибки игнорируем, тк эту команду понимают только некоторые SD карты
   // заодно и выясним - какой тип карточки у нас
   uint8_t r7_resp[5] = {0, 0, 0, 0, 0};
   GOTO_END_IF_ERROR(sd_cmd(SD_CMD8, 0x000001AA, r7_resp)); // 0xAA - спец обязательный паттерн. 0x01 - команда на проверку питания
   if (r7_resp[0] & SD_R1_ILLEGAL_CMD) // карта не поняла команду - это SD1
      card_type = SD_TYPE_SD1;
   else if (0xAA == r7_resp[4]) // карта поняла нашу команду - это SD2 карта
      card_type = SD_TYPE_SD2;
   else // карта ведет себя неадекватно
   {
      error = SD_ERROR_WRONG_RESPONSE;
      goto end;
   }

   // долбим карту командами не включение, пока ей не надоест
   // если это SDHC, она ждет от нас ACMD41


   // для SD2 аргумент команды 41 должен быть 0X40000000, для остальных 0
   uint32_t cmd41_arg = (card_type == SD_TYPE_SD2) ? 0X40020000 : 0;
   do
   {
      GOTO_END_IF_ERROR(sd_cmd(SD_CMD55, 0x00, &r1_resp));
      if (r1_resp & ~SD_R1_IDLE) // должен быть только IDLE бит, без других ошибок
      {
         error = SD_ERROR_WRONG_RESPONSE;
         goto end;
      }

      GOTO_END_IF_ERROR(sd_cmd(SD_CMD41, cmd41_arg, &r1_resp));
      if (r1_resp & ~SD_R1_IDLE) // есть биты ошибки
      {
         if (SD_TYPE_SD2 == card_type) // SD V2 не позволительно тут давать ошибку - с ней что-то не то
         {
            error = SD_ERROR_WRONG_RESPONSE;
            goto end;
         }
         else
         {
            break; // остальные карты могут ошибаться - мы будем пробовать на них CMD1
         }
      }
   } while (r1_resp != 0x00);


   // если это карта, которая не понимает ACMD41 и idle бит все еще стоит - пробуем запустить её через CMD1
   while (r1_resp != 0x00)
   {
      GOTO_END_IF_ERROR(sd_cmd(SD_CMD1, 0x00, &r1_resp));
      if (r1_resp & ~SD_R1_IDLE) // есть биты ошибки
      {
         error = SD_ERROR_WRONG_RESPONSE;
         goto end;
      }
   }

   // все, карта готова
end:
	sd_cs(false);
	// Переключаем SPI на высокую скорость
	sd_init(&spi_nRF24L01);

   return error;
}
