==> Unica-RocketSpace/CanSat-2017/src-onboard_STM32/src/sd.c <==
#include "sd.h"
#include <FreeRTOS.h>
#include <task.h>
#include <string.h>
#include <errno.h>
#include <stm32f10x_rcc.h>
#include <stm32f10x_dma.h>
#include <stm32f10x_gpio.h>
#include <stm32f10x_spi.h>
#include "crc.h"
#define SD_SPI SPI2 // настройки пинов и порта сюда пока не вынесены
#define SD_DMA DMA1 // Зависит от устройства
#define SD_BAUD_RATE_PRESCALER_SLOW SPI_BaudRatePrescaler_256  //!< для первичной прокачки и инициализации SD карты
#define SD_BAUD_RATE_PRESCALER_FAST SPI_BaudRatePrescaler_4    //!< для основной работы. Быстрее не может :c
#define SD_R1_IDLE (1 << 0)
#define SD_R1_ILLEGAL_CMD (1 << 2)
#define SD_R1_CRC_ERR (1 << 3)
#define SD_DATA_RESP_MASK           0x1F  // маска ответа SD карты о приеме данных
#define SD_DATA_RESP_DATA_ACCEPTED  0x05  // ответ SD карты - данные получены
#define SD_DATA_RESP_CRC_ERROR      0x0B  // ответ SD карты - ошибка CRC
#define SD_DATA_RESP_WRITE_ERROR    0x0D  // ответ SD карты - ошибка записи
#define SD_TOKEN_SINGLE_DATA 0xFE   // Токен заголовка пакета для CMD17/18/24
#define SD_TOKEN_MULTI_DATA 0xFC    // Токен заголовка пакета для CMD25
#define SD_TOKEN_NO_MORE_DATA 0xFD  // Токен заверешения передачи данных для CMD25
#define GOTO_END_IF_ERROR(X) if ((error = (X)) != SD_ERROR_NONE) goto end;
#define SD_CMD_TEAK_TIMEOUT (100)

void sd_init(void)
{
   // активриуем тактирование необходимой перефириии
   RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI2, ENABLE);
   RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);
   RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO, ENABLE);
   RCC_AHBPeriphClockCmd(RCC_AHBPeriph_DMA1, ENABLE);

   // настраиваем пины
   {
      // CS - им рулим вручную
      GPIO_InitTypeDef pb_init;
      pb_init.GPIO_Mode = GPIO_Mode_Out_PP;
      pb_init.GPIO_Pin = GPIO_Pin_12;
      pb_init.GPIO_Speed = GPIO_Speed_50MHz;
      GPIO_Init(GPIOB, &pb_init);
   }
   {
      // SCK, MOSI
      GPIO_InitTypeDef pb_init;
      pb_init.GPIO_Mode = GPIO_Mode_AF_PP;
      pb_init.GPIO_Pin = GPIO_Pin_13 | GPIO_Pin_15;
      pb_init.GPIO_Speed = GPIO_Speed_50MHz;
      GPIO_Init(GPIOB, &pb_init);
   }
   {
      // MISO
      GPIO_InitTypeDef pb_init;
      pb_init.GPIO_Mode = GPIO_Mode_IN_FLOATING; // GPIO_Mode_AIN почему-то не катит, я не правильно понимаю что оно значит?
      pb_init.GPIO_Pin = GPIO_Pin_14;
      pb_init.GPIO_Speed = GPIO_Speed_50MHz;
      GPIO_Init(GPIOB, &pb_init);
   }

   // настраиваем модуль SPI
   SPI_StructInit(&_sd_spi_params);
   _sd_spi_params.SPI_Mode = SPI_Mode_Master;
   _sd_spi_params.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
   _sd_spi_params.SPI_DataSize = SPI_DataSize_8b;
   _sd_spi_params.SPI_CPOL = SPI_CPOL_Low; // такие параметры требуются для sd карты
   _sd_spi_params.SPI_CPHA = SPI_CPHA_1Edge; // такие параметры требуются для sd карты
   _sd_spi_params.SPI_NSS = SPI_NSS_Soft;
   _sd_spi_params.SPI_BaudRatePrescaler = SD_BAUD_RATE_PRESCALER_FAST; // Сразу ставим быстрый, он будет меняться по ходу дела
   _sd_spi_params.SPI_FirstBit = SPI_FirstBit_MSB; // такие параметры требуются для sd карты
   _sd_spi_params.SPI_CRCPolynomial = 0x0007; // пока не используем, но при других значениях срабатывает ассерт
   SPI_Init(SD_SPI, &_sd_spi_params);
   SPI_Cmd(SD_SPI, ENABLE);
   SPI_NSSInternalSoftwareConfig(SD_SPI, SPI_NSSInternalSoft_Set);

   // общие настройки DMA, остальные будут меняться в зависимости от ситуации
   DMA_StructInit(&_sd_dma_params);
   _sd_dma_params.DMA_PeripheralBaseAddr = (uint32_t)&SD_SPI->DR;
   _sd_dma_params.DMA_PeripheralDataSize = DMA_MemoryDataSize_Byte;
   _sd_dma_params.DMA_MemoryDataSize = DMA_MemoryDataSize_Byte;
   _sd_dma_params.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
   _sd_dma_params.DMA_BufferSize = 512;
   _sd_dma_params.DMA_Mode = DMA_Mode_Normal;
   _sd_dma_params.DMA_Priority = DMA_Priority_Low;
   _sd_dma_params.DMA_M2M = DMA_M2M_Disable;

   DMA_Cmd(DMA1_Channel4, ENABLE);
   DMA_Cmd(DMA1_Channel5, ENABLE);

   sd_cs(false);
}

void sd_cs(bool state)
{
   GPIO_WriteBit(GPIOB, GPIO_Pin_12, state ? RESET : SET);
}

void sd_exchange(const void * to_send, void * to_recieve, size_t amount)
{
   const uint8_t * to_send_ = (const uint8_t *)to_send;
   uint8_t * to_recieve_ = (uint8_t *)to_recieve;
   for (size_t i = 0; i < amount; i++)
   {
      SD_SPI->DR = to_send_[i];
      _spi_wait();
      to_recieve_[i] = (uint8_t)SD_SPI->DR;
   }
}

sd_error_t sd_startup(void)
{
   sd_error_t error = SD_ERROR_NONE;
   sd_card_type_t card_type;

   // Переключаем SPI на медленный режим
   _sd_spi_params.SPI_BaudRatePrescaler = SD_BAUD_RATE_PRESCALER_SLOW; // пока такой, можно будет и побыстрее
   SPI_Init(SD_SPI, &_sd_spi_params);

   // прокачиваем 20 SPI тактов на SD карту при выключенном CS и удерживаю на линии MOSI единицу (0xFF)
   sd_cs(false);
   uint8_t dummy[20];
   memset(dummy, 0xFF, sizeof(dummy));
   sd_write(dummy, sizeof(dummy));

   // Переключаем SPI на высокую скорость
   _sd_spi_params.SPI_BaudRatePrescaler = SD_BAUD_RATE_PRESCALER_FAST; // пока такой, можно будет и побыстрее
   SPI_Init(SD_SPI, &_sd_spi_params);

   sd_cs(true);
   // отправляем карте команду CMDO уже при включенном CS
   uint8_t r1_resp = 0x00;
   GOTO_END_IF_ERROR(sd_cmd(SD_CMD0, 0x00, &r1_resp));
   if (r1_resp & ~SD_R1_IDLE) // должен быть только IDLE бит, без других ошибок
   {
      error = SD_ERROR_WRONG_RESPONSE;
      goto end;
   }

   // отлично - карта в состоние IDLE

   // заставим её проверить напряжение питания
   // ошибки игнорируем, тк эту команду понимают только некоторые SD карты
   // заодно и выясним - какой тип карточки у нас
   uint8_t r7_resp[5];
   sd_cmd(SD_CMD8, 0x000001AA, r7_resp); // 0xAA - спец обязательный паттерн. 0x01 - команда на проверку питания
   if (r7_resp[0] & SD_R1_ILLEGAL_CMD) // карта не поняла команду - это SD1
      card_type = SD_TYPE_SD1;
   else if (0xAA == r7_resp[4]) // карта поняла нашу команду - это SD2 карта
      card_type = SD_TYPE_SD2;
   else // карта ведет себя неадекватно
   {
      error = SD_ERROR_WRONG_RESPONSE;
      goto end;
   }

   // долбим карту командами не включение, пока ей не надоест
   // если это SDHC, она ждет от нас ACMD41

   // для SD2 аргумент команды 41 должен быть 0X40000000, для остальных 0
   uint32_t cmd41_arg = (card_type == SD_TYPE_SD2) ? 0X40000000 : 0;
   do
   {
      GOTO_END_IF_ERROR(sd_cmd(SD_CMD55, 0x00, &r1_resp));
      if (r1_resp & ~SD_R1_IDLE) // должен быть только IDLE бит, без других ошибок
      {
         error = SD_ERROR_WRONG_RESPONSE;
         goto end;
      }

      GOTO_END_IF_ERROR(sd_cmd(SD_CMD41, cmd41_arg, &r1_resp));
      if (r1_resp & ~SD_R1_IDLE) // есть биты ошибки
      {
         if (SD_TYPE_SD2 == card_type) // SD V2 не позволительно тут давать ошибку - с ней что-то не то
         {
            error = SD_ERROR_WRONG_RESPONSE;
            goto end;
         }
         else
         {
            break; // остальные карты могут ошибаться - мы будем пробовать на них CMD1
         }
      }
   } while (r1_resp != 0x00);


   // если это карта, которая не понимает ACMD41 и idle бит все еще стоит - пробуем запустить её через CMD1
   while (r1_resp != 0x00)
   {
      GOTO_END_IF_ERROR(sd_cmd(SD_CMD1, 0x00, &r1_resp));
      if (r1_resp & ~SD_R1_IDLE) // есть биты ошибки
      {
         error = SD_ERROR_WRONG_RESPONSE;
         goto end;
      }
   }

   // все, карта готова
end:
   sd_cs(false);
   return error;
}
